syntax = "proto2";

package MMPro.micromsg;


message UpdateStatOpLog {
	required uint32 _OpCode = 1;
}
